line charts for all; add popups

--- a/dataviz.css
+++ b/dataviz.css
@@ -142,6 +142,19 @@ div.tooltip {
 	z-index: 100;
 }
 
+div.popup {
+	position: absolute;
+	text-align: center;
+	padding: 2px;
+	font-family: "Helvetica Neue", san-serif;
+	font-size: 20px;
+	/*background: #6baed6;*/
+	border: 0px;
+	border-radius: 8px;
+	pointer-events: none;
+	z-index: 100;
+}
+
 text {
 	font-family: "Helvetica Neue", san-serif;
 }
